# rplayv6_pagent

./: .gitignore  .mcp.json  MIGRATION_CLEANUP.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  SimulatorDesign.md  SimulatorDesign_v1.md  SimulatorDesign_v2.md  TEST_RESULTS.md  TTS_IMPLEMENTATION.md  TTS_TROUBLESHOOTING.md  all-changes.diff  check-users-contents.sql  check-users.sql  claude.md  create-users-table.sql  middleware.js  package-lock.json  package.json  playwright.config.ts  test-db-connection.js  test-with-playwright.js
backend-python/: .env.sample  README.md  pyproject.toml
backend-python/app/: __init__.py  config.py  database.py  main.py
backend-python/app/agents/: __init__.py  agent_manager.py  base_agent.py  evaluation_agent.py  expert_guidance_agent.py  profile_generation_agent.py  simulation_client_agent.py
backend-python/app/middleware/: __init__.py  auth.py  error_handler.py
backend-python/app/models/: __init__.py  base.py  chat.py  competency.py  engagement.py  feedback.py  parameter.py  rubric.py  session.py  simulation.py  user.py
backend-python/app/repositories/: __init__.py  competency_repository.py  engagement_repository.py  feedback_repository.py  file_competency_repository.py  file_industry_repository.py  file_rubric_repository.py  parameter_repository.py  rubric_repository.py  session_repository.py  simulation_repository.py  user_repository.py
backend-python/app/routers/: __init__.py  agents.py  auth.py  chat.py  competencies.py  difficulty.py  engagement.py  feedback.py  industry_settings.py  parameters.py  simulation.py  (+1 more)
(+563 files in other folders)
